# irrotational-warp-lab

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
docs/: NOTES.md  TASKS.md  VALIDATION.md  gpu-superluminal-completion.md
docs/history/: history.md
notebooks/: rodal_exact_demo.ipynb
papers/: irrotational_warp_metric.bib  irrotational_warp_metric.tex
results/experiments/baseline_rodal/: README.md
scripts/: analyze_experiment.py  check_gpu.py  convergence_study_3d.py  plot_superluminal.py  reproduce_rodal_exact.py  sweep_superluminal.py  validate_celmaster_rubin.py
src/irrotational_warp/: __init__.py  adm.py  cli.py  fd.py  io.py  potential.py  validate_lentz.py  viz.py
tests/: test_basics.py
